# NeuroNet

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  run.cpp
src/neuronet/: CMakeLists.txt  HiddenNeuron.cpp  HiddenNeuron.h  InputNeuron.cpp  InputNeuron.h  NeuroNet.cpp  NeuroNet.h  Neuron.cpp  Neuron.h  NeuronEdge.cpp  NeuronEdge.h  OutputNeuron.cpp  OutputNeuron.h
src/neuronet/exceptions/: CMakeLists.txt  NetworkStructureException.cpp  NetworkStructureException.h
